View bulk upload report

--- a/gold-admin-frontend/src/app/views/pages/emi-management/bulk-upload-report/bulk-upload-report-list/bulk-upload-report-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/bulk-upload-report/bulk-upload-report-list/bulk-upload-report-list.component.html
@@ -47,27 +47,26 @@
 
                 <ng-container matColumnDef="fileName">
                     <mat-header-cell *matHeaderCellDef>File Name</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.branchId}}</mat-cell>
+                    <mat-cell *matCellDef="let report">{{report?.originalname}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="userName">
                     <mat-header-cell *matHeaderCellDef>Username</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let report">{{report?.user?.first_name}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="time">
                     <mat-header-cell *matHeaderCellDef>Time</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.partner.name | titlecase}}</mat-cell>
+                    <mat-cell *matCellDef="let report">{{report?.createdAt}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="status">
                     <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.state.name }}</mat-cell>
+                    <mat-cell *matCellDef="let report">{{report?.status}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="action">
-                    <mat-header-cell *matHeaderCellDef>Action</mat-header-cell>
-                    <mat-cell *matCellDef="let role">
+                    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-cell *matCellDef="let report">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <!-- <div (click)="viewRole(role)" class="kt-pointer"> View | &nbsp;</div>
-                            <div (click)="editRole(role)" class="kt-pointer"> Edit | &nbsp;</div> -->
-                            <div class="kt-pointer text-danger" (click)="deleteRole(role)">Delete</div>
+                            <div (click)="downloadFile(report)" class="kt-pointer"> File | &nbsp;</div>
+                            <div (click)="downloadReport(report)" class="kt-pointer"> Report </div>
                         </div>
                     </mat-cell>
                 </ng-container>
