--- a/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/user-classification/user-classification.component.html
@@ -85,7 +85,9 @@
                                         </option>
                                     </select>
                                 </td>
-                                <td class="rating-bm"></td>
+                                <td class="rating-bm text-center">
+                                        <img src="assets/media/icons/incorrect.svg">
+                                </td>
                             </tr>
                             <tr>
                                 <td scope="row" class="rating-title">ID Proof</td>
@@ -98,7 +100,8 @@
                                         </option>
                                     </select>
                                 </td>
-                                <td class="rating-bm">
+                                <td class="rating-bm text-center">
+                                    <img src="assets/media/icons/incorrect.svg">
                                 </td>
                             </tr>
                             <tr>
@@ -112,7 +115,9 @@
                                         </option>
                                     </select>
                                 </td>
-                                <td class="rating-bm"></td>
+                                <td class="rating-bm text-center">
+                                        <img src="assets/media/icons/incorrect.svg">
+                                </td>
                             </tr>
                             <tr>
                                 <td scope="row" class="rating-title">KYC Status</td>
@@ -120,7 +125,7 @@
                                     <select class="form-control" formControlName="kycStatusFromCce">
                                         <option value="" [disabled]=true [selected]="true"> Select Status
                                         </option>
-                                        <option *ngFor="let status of kycStatus" [value]="status.value">
+                                        <option *ngFor="let status of cceKycStatus" [value]="status.value">
                                             {{status.name | titlecase}}
                                         </option>
                                     </select>
@@ -129,7 +134,7 @@
                                     <select class="form-control">
                                         <option value="" [disabled]=true [selected]="true"> Select Status
                                         </option>
-                                        <option *ngFor="let status of kycStatus" [value]="status.value">
+                                        <option *ngFor="let status of bmKycStatus" [value]="status.value">
                                             {{status.name | titlecase}}
                                         </option>
                                     </select></td>
