--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/category/category.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/category/category.component.html
@@ -27,6 +27,12 @@
                     <mat-cell *matCellDef="let element">{{element.conversionFactor }}</mat-cell>
                 </ng-container>
 
+                <ng-container matColumnDef="metalType">
+                    <mat-header-cell *matHeaderCellDef>Metal Type
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element">{{element.metalType.metalType }}</mat-cell>
+                </ng-container>
+
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Action
                     </mat-header-cell>
