Fixed issue in wallet price

--- a/gold-admin-frontend/src/app/views/pages/emi-management/config-details/wallet-price/wallet-price-list/wallet-price-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/config-details/wallet-price/wallet-price-list/wallet-price-list.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="walletPrice$ | async as walletPrice">
+<div class="row" *ngIf="walletPrice">
     <div class="col-12">
         <div *ngIf="walletPrice;then showData;else dataNotFound"></div>
         <ng-template #showData>
