Loan application form

--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.scss
@@ -11,7 +11,7 @@
 		left: 30%;
 		z-index: 99999 !important;
 		background: transparent;
-		border: thin solid;
+		border: thin solid #454D67;
 		border-radius: 5px;
 		padding: 5px;
 	}
