--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
@@ -1,65 +1,32 @@
 <kt-portlet>
     <kt-portlet-body>
         <div class="row">
-            <div class="col-7">
+            <div class="col-12">
                 <mat-tab-group [selectedIndex]="selected">
                     <mat-tab label="Basic Details">
-                        <kt-basic-details (basicFormEmit)="basicForm($event)" [invalid]="basicInvalid"></kt-basic-details>
+                        <kt-basic-details (basicFormEmit)="basicForm($event)" [invalid]="invalid.basic" [disable]="disabledForm"></kt-basic-details>
                     </mat-tab>
                     <mat-tab label="KYC Details">
-                        <kt-kyc-details (kycEmit)="kycEmit($event)" [invalid]="kycInvalid"></kt-kyc-details>
+                        <kt-kyc-details (kycEmit)="kycEmit($event)" [invalid]="invalid.kyc" [disable]="disabledForm"></kt-kyc-details>
+                    </mat-tab>
+                    <mat-tab label="Bank Details">
+                        <kt-bank-details [invalid]="invalid.bank" [disable]="disabledForm"></kt-bank-details>
                     </mat-tab>
                     <mat-tab label="Nominee Details">
-                        <kt-nominee-details (nomineeEmit)="nomineeEmit($event)" [invalid]="nomineeInvalid"></kt-nominee-details>
+                        <kt-nominee-details (nomineeEmit)="nomineeEmit($event)" [invalid]="invalid.nominee" [disable]="disabledForm"></kt-nominee-details>
                     </mat-tab>
-                    <mat-tab label="Final Loan Intrest">
-                        <kt-nominee-details (nomineeEmit)="nomineeEmit($event)" [invalid]="nomineeInvalid"></kt-nominee-details>
+                    <mat-tab label="Final Interest Calculator">
+                        <kt-final-interest-amount [invalid]="invalid.intrest" [disable]="disabledForm"></kt-final-interest-amount>
+                    </mat-tab>
+                    <mat-tab label="Approval">
+                        <kt-approval [invalid]="invalid.approval" [disable]="disabledForm"></kt-approval>
                     </mat-tab>
                 </mat-tab-group>
-            </div>
-            <div class="col-5" [formGroup]="bankForm">
-                <label class="text-color form-label kt-margin-t-15 p-0">Bank Details</label>
-                <div class="row kt-margin-t-35">
-                    <div class="col-4 form-label">
-                        <label class="text-color kt-padding-l-10">Name</label>
-                    </div>
-                    <div class="col-8">
-                        <input type="text" class="form-control" placeholder="vishwas shetty" formControlName="name"
-                        [class.isError]="controls.name.touched && controls.name.invalid">
-                        <mat-error *ngIf="controls.name.touched && controls.name.invalid">
-                            <span *ngIf="controls.name.errors?.required">Field is Required</span>
-                            <span *ngIf="controls.name.errors?.pattern">Invalid Input</span>
-                        </mat-error>
-                    </div>
-                </div>
-                <div class="row kt-margin-t-15">
-                    <div class="col-4 form-label">
-                        <label class="text-color kt-padding-l-10">Account No.</label>
-                    </div>
-                    <div class="col-8">
-                        <input type="text" class="form-control" placeholder="10234501203203" formControlName="accountNumber"
-                         numbersOnly [class.isError]="controls.accountNumber.touched && controls.accountNumber.invalid" >
-                        <mat-error *ngIf="controls.accountNumber.touched && controls.accountNumber.invalid">Field is Required</mat-error>
-                    </div>
-                </div>
-                <div class="row kt-margin-t-15">
-                    <div class="col-4 form-label">
-                        <label class="text-color kt-padding-l-10">IFSC Code</label>
-                    </div>
-                    <div class="col-8">
-                        <input type="text" class="form-control" placeholder="IFSC0000XXX" formControlName="ifscCode"
-                        [class.isError]="controls.ifscCode.touched && controls.ifscCode.invalid" maxlength="11">
-                        <mat-error *ngIf="controls.ifscCode.touched && controls.ifscCode.invalid">
-                            <span *ngIf="controls.ifscCode.errors?.required">Field is Required</span>
-                            <span *ngIf="controls.ifscCode.errors?.pattern">Invalid Input</span>
-                        </mat-error>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="row">
             <div class="col">
-                <kt-ornaments></kt-ornaments>
+                <kt-ornaments [invalid]="invalid.ornaments" [disable]="disabledForm"></kt-ornaments>
             </div>
             
         </div>
@@ -78,11 +45,16 @@
                 <mat-divider></mat-divider>
             </div>
         </div>
-        <div class="row py-3">
+        <div class="row py-3" *ngIf="disable">
             <div class="col-12">
                 <kt-button [value]="'Apply'" [type]="'button'" (click)="apply()"></kt-button>
                 <span class="kt-padding-10"></span>
                 <kt-button [value]="'Cancel'" [type]="'reset'" (click)="cancel()"></kt-button>
+            </div>
+        </div>
+        <div class="row" id="packets" *ngIf="!disable">
+            <div class="col">
+                <kt-packets></kt-packets>
             </div>
         </div>
     </kt-portlet-body>
