--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/final-interest-amount/final-interest-amount.component.html
@@ -3,7 +3,7 @@
         <div class="row kt-margin-b-20 kt-margin-t-30">
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Customer ID</label>
                     </div>
                     <div class="col-7">
@@ -13,7 +13,7 @@
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Loan ID</label>
                     </div>
                     <div class="col-7">
@@ -26,7 +26,7 @@
         <div class="row kt-margin-b-20">
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Loan Amount</label>
                     </div>
                     <div class="col-7">
@@ -36,7 +36,7 @@
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Tenure</label>
                     </div>
                     <div class="col-7">
@@ -49,7 +49,7 @@
         <div class="row kt-margin-b-20">
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Start Date</label>
                     </div>
                     <div class="col-7">
@@ -59,7 +59,7 @@
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Loan Repay Date</label>
                     </div>
                     <div class="col-7">
@@ -72,7 +72,7 @@
         <div class="row kt-margin-b-20">
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Gold Gross Weight</label>
                     </div>
                     <div class="col-7">
@@ -82,7 +82,7 @@
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Repay Date Type</label>
                     </div>
                     <div class="col-7">
@@ -98,7 +98,7 @@
         <div class="row kt-margin-b-20">
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Gold Net Weight</label>
                     </div>
                     <div class="col-7">
@@ -108,7 +108,7 @@
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Final Net weight</label>
                     </div>
                     <div class="col-7">
@@ -121,7 +121,7 @@
         <div class="row kt-margin-b-20">
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Interest Rate</label>
                     </div>
                     <div class="col-7">
@@ -131,7 +131,7 @@
             </div>
             <div class="col-6">
                 <div class="row">
-                    <div class="offset-1 col-3 form-label">
+                    <div class="col-4 form-label">
                         <label>Current LTV Amount</label>
                     </div>
                     <div class="col-7">
@@ -149,11 +149,11 @@
             </div>
         </div>
     </form>
-    <div class="row kt-margin-b-20">
+    <div class="row justify-content-center kt-margin-b-20">
         <div class="col-6">
-            <div class="row">
+            <div class="row justify-content-center">
 
-                <div class="col-7 offset-4">
+                <div class="col-7">
                     <div class="table-div">
                         <table class="table table-bordered">
                             <thead>
