--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -370,6 +370,7 @@ mat-header-row{
 	justify-content: center;
 	overflow: hidden;
 	position: relative;
+	cursor: pointer;
 
 	.fetched-image {
 		width: 100%;
