--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-address/user-address.component.html
@@ -356,7 +356,7 @@
                                 <div class=" kt-margin-t-20">
                                     <div class="row">
                                         <div class="col-3 offset-1 p-0">
-                                            <label class="mandatory  font-weight-500 text-color">Address
+                                            <label class="mandatory  font-weight-500 text-color">Address Proof
                                             </label>
                                         </div>
                                         <div class="col-7">
