--- a/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -88,7 +88,7 @@
                                         </mat-error>
                                         <mat-error
                                             *ngIf="controls.alternateMobileNumber.errors?.pattern && controls.alternateMobileNumber.touched">
-                                            Required field
+                                            Invalid Input
                                         </mat-error>
                                     </div>
                                 </div>
