--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/nominee-details/nominee-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/nominee-details/nominee-details.component.html
@@ -19,7 +19,7 @@
                     <label class="text-color kt-padding-l-10">Age</label>
                 </div>
                 <div class="col-6">
-                    <input type="number" class="form-control" placeholder="10234501203203" numbersOnly
+                    <input type="number" class="form-control" placeholder="18" numbersOnly
                         formControlName="nomineeAge" (blur)="checkForMinor()"
                         [class.isError]="controls.nomineeAge.touched && controls.nomineeAge.invalid">
                     <mat-error *ngIf="controls.nomineeAge.touched && controls.nomineeAge.invalid">
@@ -59,7 +59,7 @@
                         <label class="text-color kt-padding-l-10">Guardian Age</label>
                     </div>
                     <div class="col-6">
-                        <input type="number" class="form-control" placeholder="10234501203203" numbersOnly
+                        <input type="number" class="form-control" placeholder="25" numbersOnly
                             formControlName="guardianAge" (blur)="checkForGuardianAge()"
                             [class.isError]="controls.guardianAge.touched && controls.guardianAge.invalid">
                         <mat-error *ngIf="controls.guardianAge.touched && controls.guardianAge.invalid">
